log
Fri, Apr 18, 2025  3:27:06 PM: 
 hashmap.c | 43 +++++++++++++++++++++++++++++++++++++------
 1 file changed, 37 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c:11:8: error: redefinition of 'struct Pair'
   11 | struct Pair {
      |        ^~~~
In file included from hashmap.c:6:
hashmap.h:15:16: note: originally defined here
   15 | typedef struct Pair {
      |                ^~~~
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  3:30:46 PM: 
 hashmap.c | 43 ++++++-------------------------------------
 1 file changed, 6 insertions(+), 37 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
47c780e
Fri, Apr 18, 2025  3:37:09 PM: 
 tests:  0|6
total_score: 0/70
2019096
Fri, Apr 18, 2025  3:41:44 PM: 
 hashmap.c | 38 ++++++++++++++++++++++++++++++++------
 1 file changed, 32 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
63837cc
Fri, Apr 18, 2025  3:50:56 PM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5f68fc2
Fri, Apr 18, 2025  4:34:12 PM: 
 hashmap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 40/70
9cd9da9
Fri, Apr 18, 2025  4:35:08 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 40/70
4d8ae6d
